<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crypto_prices"
            android:icon="@drawable/nav_crypto_prices"
            android:title="@string/nav_crypto_prices" />
        <item
            android:id="@+id/nav_crypto_graphs"
            android:icon="@drawable/nav_crypto_graphs"
            android:title="@string/nav_crypto_graphs" />
        <item
            android:id="@+id/nav_bitfinex_candle_chart"
            android:icon="@drawable/candle_graph"
            android:title="@string/crypto_candle_chart" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/nav_about" />
    </group>

</menu>